--- a/index.html
+++ b/index.html
@@ -24,35 +24,36 @@
         </div>
         <div class="intro-and-image">
           <div class="intro-gp">
-            <h1 class="title">Try to make Myanmar Foods at home?<h1>
-                <div class="intro">This website is where you can find the varioius recipes of Myanmar Foods. You can
-                  find handreds of Myanmar Food recipes here!</div>
-                <button class="sign-up">Sign up</button>
+            <h1 class="title">Try to make Myanmar Foods at home?</h1>
+            <div class="intro">This website is where you can find the various recipes of Myanmar Foods. You can
+              find hundreds of Myanmar Food recipes here!</div>
+            <button class="sign-up">Sign up</button>
           </div>
-          <img src="../manmarfood.jpg">
+          <img src="../manmarfood.jpg" alt="Myanmar traditonal foods">
         </div>
       </div>
     </div>
     <!--middle part-->
 
-    <div class="mini-title">Any kind of Food!</div>
+    <h2 class="mini-title">Any kind of Food!</h2>
 
     <div class="image-container">
       <div class="item">
-        <img src="../mohinga-myanmar-national-cuisine-side-260nw-2624541463.jpg.webp">
-        <div class="subtext">Tradition Cuisine?</div>
+        <img src="../mohinga-myanmar-national-cuisine-side-260nw-2624541463.jpg.webp" alt="image of mohinga">
+        <div class="subtext">Traditional Cuisine?</div>
       </div>
       <div class="item">
         <img
-          src="../myanmar-soup-food-icon-isometric-vector-culture-map-asia-burma-myanmar-soup-food-icon-isometric-vector-culture-map-264888767.jpg.webp">
-        <div class="subtext">Ethnical Cuisine?</div>
+          src="../myanmar-soup-food-icon-isometric-vector-culture-map-asia-burma-myanmar-soup-food-icon-isometric-vector-culture-map-264888767.jpg.webp"
+          alt="image of tofunway">
+        <div class="subtext">Ethnic Cuisine?</div>
       </div>
       <div class="item">
-        <img src="../laphat.jpg">
+        <img src="../laphat.jpg" alt="image of laphatthote">
         <div class="subtext">Kind of Salad?</div>
       </div>
       <div class="item">
-        <img src="../dessert.jpeg">
+        <img src="../dessert.jpeg" alt="image of monksanepaung">
         <div class="subtext">Or Dessert?</div>
       </div>
     </div>
