--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               find hundreds of Myanmar Food recipes here!</div>
             <button class="sign-up">Sign up</button>
           </div>
-          <img src="../manmarfood.jpg" alt="Myanmar traditonal foods">
+          <img src="./manmarfood.jpg" alt="Myanmar traditonal foods">
         </div>
       </div>
     </div>
@@ -39,21 +39,21 @@
 
     <div class="image-container">
       <div class="item">
-        <img src="../mohinga-myanmar-national-cuisine-side-260nw-2624541463.jpg.webp" alt="image of mohinga">
+        <img src="./mohinga-myanmar-national-cuisine-side-260nw-2624541463.jpg.webp" alt="image of mohinga">
         <div class="subtext">Traditional Cuisine?</div>
       </div>
       <div class="item">
         <img
-          src="../myanmar-soup-food-icon-isometric-vector-culture-map-asia-burma-myanmar-soup-food-icon-isometric-vector-culture-map-264888767.jpg.webp"
+          src="./myanmar-soup-food-icon-isometric-vector-culture-map-asia-burma-myanmar-soup-food-icon-isometric-vector-culture-map-264888767.jpg.webp"
           alt="image of tofunway">
         <div class="subtext">Ethnic Cuisine?</div>
       </div>
       <div class="item">
-        <img src="../laphat.jpg" alt="image of laphatthote">
+        <img src="./laphat.jpg" alt="image of laphatthote">
         <div class="subtext">Kind of Salad?</div>
       </div>
       <div class="item">
-        <img src="../dessert.jpeg" alt="image of monksanepaung">
+        <img src="./dessert.jpeg" alt="image of monksanepaung">
         <div class="subtext">Or Dessert?</div>
       </div>
     </div>
